# pomodoro-timer

./: .gitignore  BUILD_WINDOWS.md  CMakeLists.txt  PomodoroTimer.pro  README.md  README_POMODORO.md  main.cpp  pomodoro_timer.cpp  pomodoro_timer.h
.github/workflows/: build-windows.yml
